tests/fail/expr/range.rs
fn main() {
    one_assert::assert!(false..);
    one_assert::assert!(..=5);
}
